Add DigitalOcean App Platform auto-deploy support